<?php

namespace DesignPatterns\Creational\AbstractFactory;

interface ProductA
{
    public function __construct();
}

interface ProductB
{
    public function __construct();
}
